--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>dataviz</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      noscript
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
