:snake: TIME TO GO HOME

--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <title>dataviz</title>
   </head>
   <body>
-    <div id="app">
-      noscript
-    </div>
+    <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
